# Diagnostic_Multiagents

./: .env.example  README.md  package-lock.json  package.json  pyproject.toml  rapport_technique.md
.langgraph_api/: .langgraph_ops.pckl
backend/: langgraph.json  requirements-dev.txt  requirements.txt
backend/.langgraph_api/: .langgraph_ops.pckl
backend/app/: api.py  graph.py  llm.py  state.py
backend/app/nodes/: diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/tools/: care_tools.py  mcp_client.py  patient_tools.py
diagnostic_multiagents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: langgraph_studio_instructions.md
frontend/: index.html
frontend/src/: App.jsx
mcp_server/: server.py
mcp_server/data/: guidelines.json
screenshots/: simulation_trace.html  simulation_trace.json
tools/: capture_frontend_screenshots.sh  capture_langgraph_screenshots.sh  playwright_capture.js  playwright_capture_frontend.js  simulate_workflow.py
